// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for registered roommate 1`] = `
<React.Fragment>
  <div
    className="css-14c5xr0"
  >
    <div>
      kreebs mcgreebs
      <br />
    </div>
  </div>
  <div
    className="css-1u4p759"
  >
    <span
      className="css-1rn2trc"
    >
      Application Status:
    </span>
    <br />
    <ForwardRef(render)
      bold={true}
      color="#67C18B"
    >
      Completed
    </ForwardRef(render)>
  </div>
</React.Fragment>
`;

exports[`matches snapshot for roommate in progress 1`] = `
<React.Fragment>
  <div
    className="css-14c5xr0"
  >
    <div>
      kreebs mcgreebs
      <br />
    </div>
  </div>
  <div
    className="css-1u4p759"
  >
    <span
      className="css-1rn2trc"
    >
      Application Status:
    </span>
    <br />
    <ForwardRef(render)
      bold={true}
      color="#FAC700"
    >
      In Progress
    </ForwardRef(render)>
  </div>
</React.Fragment>
`;

exports[`matches snapshot for unregistered roommate 1`] = `
<React.Fragment>
  <div
    className="css-14c5xr0"
  >
    <div>
      kreebs mcgreebs
      <br />
      <span
        className="css-1d2tdb8"
      >
        (383) 838-4849
      </span>
    </div>
    <div>
      <br />
      <ForwardRef
        className="css-3v3cqv"
        to={
          Object {
            "pathname": "/resend-invite",
            "state": Object {
              "confirmationButtonText": "Back to Rental Profile",
              "initialValues": Object {
                "first_name": "kreebs",
                "id": 71,
                "is_registered": false,
                "last_milestone": null,
                "last_name": "mcgreebs",
                "phone_number": "(383) 838-4849",
              },
              "returnRoute": "/rental-profile/options#undefined",
            },
          }
        }
      >
        Edit/Resend
      </ForwardRef>
    </div>
  </div>
  <div
    className="css-1u4p759"
  >
    <span
      className="css-1rn2trc"
    >
      Application Status:
    </span>
    <br />
    <ForwardRef(render)
      bold={true}
      color="#DB5963"
    >
      Not Started
    </ForwardRef(render)>
  </div>
</React.Fragment>
`;
